# rust-demo1

./: .gitignore  Cargo.toml  README.MD  app.http  linux_epool_example.c  shell.nix
.sqlx/: query-2afb443cf28ea15c83cf7fb8a27fd7fda464032912af371c32f5d1a052982b9f.json  query-46ec995ee877c60ae7ec4af4bd2cf47272df3fdfdb4a85e6ad33296aa74ee316.json  query-69674cdbf1872963e0baa7585228d5d70c3d4bda332fe67a800c0e9840ddd419.json  query-de919d2be4c3af114abc44927aaaef44d67aa217ce44fd376b0765ec3e843608.json  query-e1a6ee96f40e05980463f8aac57a32e0a62f7001b70767100875376cefcb99f3.json
config/: default.toml  dev.toml  prod.toml
migrations/: 0001_accounts.down.sql  0001_accounts.up.sql  0002_transactions.down.sql  0002_transactions.up.sql
my_lib/src/: fibonacci.rs  lib.rs
src/: main.rs  mod1.rs  mod2.rs  my_executor.rs
src/mod2/: private.rs  public.rs
test_project/: Cargo.toml
test_project/src/: data.rs  lib.rs  user_service.rs
test_project/tests/: user_service_test.rs
