[package]
name = "rust-demo1"
version = "0.1.0"
edition = "2021"

# custom name for main: rust-demo1 -> sequence_10
[[bin]]
name = "sequence_10"
path = "src/main.rs"

[[bin]]
name = "sum_10"
path = "src/bin/fibonacci_sum.rs"

[[bin]]
name = "prod_10"
path = "src/bin/fibonacci_prod.rs"

[[bin]]
name = "test_axum"
path = "src/bin/test_axum.rs"

[dependencies]
rand = "0.9"
uuid = { version = "1", features = ["v4"] }
my_lib = { path = "./my_lib" }
thiserror = "2.0.18"
anyhow = "1.0.100"
serde-xml-rs = "0.8.2"
chrono = { version = "0.4.43", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = [
    "env-filter",
    "time",
    "json",
] }
tracing-appender = "0.2"
config = "0.15"
futures = "0.3"
async-channel = "2.5.0"
async-trait = "0.1.89"
tokio = { version = "1", features = ["full"] }
axum = "0.8"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tower = { version = "0.5", features = ["full"] }
tower-http = { version = "0.6", features = ["cors", "fs", "timeout"] }
sqlx = { version = "0.8", features = ["postgres", "chrono", "runtime-tokio", "bigdecimal"]}
bigdecimal = { version = "0.4", features = ["serde"] }

[dev-dependencies]
axum-test = "18"
testcontainers = "0.26"
